# Elite

./: .gitattributes  .gitignore  CMakeLists.txt  LightingParams.md  README.md  asteroids.html  debug.html  generation ships.md  history.md  hit-volumes.html  hit-volumes.js  init_project.bat  navigation-entry-system-s5-level0-v6.patch  sandbox-lore.txt  svg-opengl-parser – visualisator.html
Notes/: fate.md
Notes/Colonycore/: Colonycore.md
Notes/History/: history.md
Notes/History/generation ships/: 01. Мэйфлауэр II.md  02. SVAROG-1.md  03. TIANHE-1.md  04. UBUNTU-1.md  05. HERACLES-1.md  06. CELESTIAL-DESTINY-1.md  07. GREEN-ARK-1.md  08. DHARMA-1.md  09. IRON-SHIELD-1.md  10. AL-QUDS-1.md  11. NEXT-1.md  12. EUROPA-1.md  13. NEW-HELLAS-1.md  13. RESOURCER-1.md  14. NEW-JERUSALEM-1.md  15. UHURU-2.md  16. ODYSSEY-1.md  17. NIRVANA-1.md  18. DHARMA-2.md  19. AMAZONIA-1.md  20. FREE-WORLD-1.md  21. CELESTIAL-DESTINY-2.md  22. IRON-SHIELD-2.md  23. GAIA-2.md  24. KEPLER-1.md  25. NOMAD-1.md  26. FINAL-ARK-1.md  27. LEGACY-1.md  28. DEEP-SEEK-1.md  29. HOMEWARD-1.md  30. FAREWELL-1.md  31. HYPERION-1.md  generation ships.md  star_systems.json
Notes/SetUp/: LightingParams.md  Snapshot.md
glad/include/glad/: gl.h
src/: main.cpp
src/WebSocket/: DebugServer.cpp  DebugServer.h
src/WebSocket/debug/: frustum_viewer.html  shipcore_viewer.html
src/assets/data/: initial_world_state.json
src/assets/models/: cobra-mk1.mtl
src/assets/webui/: attachment_editor.html  debug_control.html  debug_control_old.html  frustum_debug.html  loading.html  main_menu.html  ship_core.html  system_map.html  system_map_panel.html
src/core/: Application.cpp  Application.h  ConsoleOutput.h  GameState.h  StateContext.cpp  StateContext.h  StateStack.cpp  StateStack.h  log.h
src/debug/: DebugSettings.cpp  DebugSettings.h  FrustumDebugData.cpp  FrustumDebugData.h
src/debug/render/: DebugHitVolumeRenderer.cpp  DebugRenderer.h  ServerHitVolumeRenderer.cpp  ServerHitVolumeRenderer.h
src/galaxy/: Actors.h  GalaxyDatabase.cpp  GalaxyDatabase.h  GalaxyEnums.h  GalaxyGenerationShip.h  GalaxyIds.h  HistoricalArchiveEntry.h  Node.h  StarRoute.h  StarSystem.h  StarSystemPhysics.h  SubActor.h
src/game/: DetectedSignal.h  ShipParams.h  SignalEnvironment.h  SignalPolicy.h  SignalReceiver.cpp  SignalReceiver.h  SpaceState-Init.cpp  SpaceState.cpp  SpaceState.h  WorldSignal.h
src/game/client/: ClientWorldState.cpp  ClientWorldState.h  GameClient.cpp  GameClient.h
src/game/core/: QuantitySlot.h
src/game/damage/: DamageComponent.cpp  DamageComponent.h  DamageDebug.cpp  DamageDebug.h  DamageEvent.h  DamageSeverity.h  DamageSystem.h  DamageTestObject.cpp  HitComponent.h  HitVolume.h  IDamageHandler.h  IDamageable.h  ShipDamageEvent.h  ShipDamageSeverity.h  TestDamageHandler.h
src/game/debug/: AttachmentEditorPayload.cpp  AttachmentEditorPayload.h  VolumeViewerPayload.cpp
src/game/equipment/: EquipmentDescriptor.h  EquipmentModule.h  EquipmentSlot.h  EquipmentTypes.h  IEquipmentModule.h  ShipEquipment.h  ShipEquipmentDesc.h
src/game/geometry/: AssemblyMeshLibrary.cpp  MeshGPU.h  MeshLibrary.cpp  MeshLibrary.h  ObjLoader.cpp  ObjLoader.h  ObjectAssembly.h  ObjectAssemblyRegistry.cpp
src/game/items/: Item.h
src/game/math/: MathTransform.h
src/game/navigation/: CubicNavigationCameraFlight.h  CubicNavigationGrid.cpp  CubicNavigationGrid.h  CubicNavigationHierarchy.h  CubicNavigationInteraction.h  DynamicMotionState.h  DynamicMotionSystem.cpp  DynamicMotionSystem.h  GalaxyNavigationConfig.cpp  GalaxyNavigationConfig.h  GalaxyNavigationGrid.cpp  GalaxyNavigationGrid.h  GravityFieldSystem.h  HubNavigationFrame.h  NavigationAddressFormatter.h  NavigationPlan.h  NavigationRegionCatalog.cpp  NavigationRegionCatalog.h  OrbitalCorridorSystem.h  ReferenceFrame.h  SystemNavigationGrid.cpp  SystemNavigationGrid.h
src/game/network/: ClientMessage.h  ITransport.h  LocalLoopbackTransport.cpp  LocalLoopbackTransport.h
src/input/: Input.cpp  Input.h
src/render/: Camera.cpp  Camera.h  DebugGrid.cpp  DebugGrid.h  Font.cpp  Font.h  InitShaders.cpp  Mesh.h  RenderCockpitPass.cpp  RenderCockpitPass.h  Renderer.cpp  Renderer.h  ScreenUtils.cpp  ScreenUtils.h  ShaderLibrary – копія.cpp  ShaderLibrary – копія.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderProgram.h  ShaderUtils.cpp  ShaderUtils.h  SignalWave.h  TextRenderer.cpp  TextRenderer.h  ViewportUtils.h  VisualTuning.h  WorldLabel.h  WorldLabelRenderer.cpp  WorldLabelRenderer.h
src/scene/: EntityID.h  PreparedScene.h  SceneRenderer.cpp  SceneRenderer.h
src/ui/: ConfirmExitState.cpp  ConfirmExitState.h  ContractsState.cpp  ContractsState.h  EquipmentState.cpp  EquipmentState.h  HudRenderer.cpp  HudRenderer.h  HudTypes.h  MainMenuState.cpp  MainMenuState.h  NavigationMenuState.cpp  NavigationMenuState.h  ShipyardState.cpp  ShipyardState.h  TradeMenuState.cpp  TradeMenuState.h
src/window/: Window.cpp  Window.h
src/world/: InterferenceSource.h  Planet.h  WorldObject.h  WorldParams.h  WorldSignal.h  WorldSignalTxSystem.cpp
src_old/: main.cpp
src_old/core/: Application.cpp  Application.h
src_old/debug/: FrustumDebugData.h
src_old/galaxy/: GalaxyDatabase.cpp  GalaxyDatabase.h  GalaxyGenerationShip.h  SubActor.h
src_old/game/: SpaceState-Init.cpp  SpaceState.cpp  SpaceState.h
src_old/input/: Input.cpp  Input.h
src_old/render/: Camera.cpp  Camera.h  DebugGrid.h  Font.cpp  Font.h  InitShaders.h  RenderCockpitBitmapPass.cpp  RenderCockpitBitmapPass.h  RenderContext.h  Renderer.cpp  ScreenUtils.h  ShaderUtils.h
src_old/scene/: SceneRenderer.h
src_old/ui/: ConfirmExitState.cpp  ContractsState.h  EquipmentState.cpp  HudRenderer.h  HudTypes.h  MainMenuState.cpp  MainMenuState.h  NavigationMenuState.cpp  ShipyardState.h  TradeMenuState.cpp
src_old/window/: Window.cpp  Window.h
src_old/world/: ITransmitterSource.h  InterferenceSource.h  Planet.h  WorldObject.h  WorldSignal.h  WorldSignalTxSystem.h
tools/: generate_sol_imported_bodies.py
utils/: asteroids.html  hit-volumes.html  hit-volumes.js  svg-opengl-parser – visualisator.html
(+746 files in other folders)
